Правки блоков Fun

--- a/index.html
+++ b/index.html
@@ -137,26 +137,82 @@
                 <div class="funs_descr">
                     <ul>
                         <li>
-                            <h4>Free</h4>
+                            <h4>2,000</h4>
                             <p>CMS Installation</p>
                         </li>
                         <li>
-                            <h4>Free</h4>
-                            <p>CMS Installation</p>
+                            <h4>100</h4>
+                            <p>Awards Won</p>
                         </li>
                         <li>
-                            <h4>Free</h4>
-                            <p>CMS Installation</p>
+                            <h4>32,000</h4>
+                            <p>Registration Domains</p>
                         </li>
                         <li>
-                            <h4>Free</h4>
-                            <p>CMS Installation</p>
+                            <h4>31,998</h4>
+                            <p>Satisfied Custumers</p>
                         </li>
                     </ul>
                 </div>                   
             </div>
         </section>
-        <section></section>
+         <section class="wrapper_block">
+            <div class="wrapper_descr">
+                <h6>Services</h6>
+                <h2>Why choose us</h2>
+            </div>
+            <div class="carts">
+                <ul>
+                    <li>
+                        <i class="fa fa-spinner fa-4x" aria-hidden="true"></i>
+                        <div class="cart">
+                            <h3 class="cart-title">100% Uptime Guarantee</h3>
+                            <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fa fa-shield fa-4x" aria-hidden="true"></i>
+                        <div class="cart">
+                            <h3 class="cart-title">Safe and Secured</h3>
+                            <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    <li>
+                        <i class="fa fa-phone-square fa-4x" aria-hidden="true"></i>
+                        <div class="cart">
+                            <h3 class="cart-title">Our Dedicated Support</h3>
+                            <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="wrapper_block">
+            <div class="wrapper_descr">
+                <h6>Custumer Says</h6>
+                <h2>Our satisfied custumer says</h2>
+            </div>
+            <div class="carts">
+                <ul>
+                    <li>
+                        <img src="./icons/person_1.jpg" alt="p1" class="person_img">
+                        <div class="cart">
+                            <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./icons/person_2.jpg" alt="p2" class="person_img">
+                        <div class="cart">
+                           <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    <li>
+                        <img src="./icons/person_3.jpg" alt="p3" class="person_img">
+                        <div class="cart">
+                           <p>Evon the all-powerful Pointing has no control about the blind texts it is an almost unorthogrophic</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
